Modified: wflow-install - MariaDB - Replaced MySQL with MariaDB 10.2.10 @6.0-SNAPSHOT