@@ -1,16 +1,16 @@
 @ECHO OFF
 
-REM Start MySQL
-ECHO == Starting MySQL ==
+REM Start MariaDB
+ECHO == Starting MariaDB ==
 ECHO.
-CALL .\mysql-start.bat
+CALL .\mariadb-start.bat
 ECHO.
 
 REM Start Tomcat
 set JAVA_HOME=.\jre1.8.0_112
 set CATALINA_HOME=.\apache-tomcat-8.5.16
-set JAVA_OPTS=-XX:MaxPermSize=128m -Xmx512M -Dwflow.home=./wflow/
-REM set JAVA_OPTS=-XX:MaxPermSize=128m -Xmx1024M -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,suspend=n,server=y,address=5115 -Dwflow.home=./wflow/
+set JAVA_OPTS=-Xmx512M -Dwflow.home=./wflow/
+REM set JAVA_OPTS=-Xmx1024M -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,suspend=n,server=y,address=5115 -Dwflow.home=./wflow/
 ECHO == Starting Tomcat from %CATALINA_HOME% ==
 ECHO.
 %CATALINA_HOME%\bin\catalina.bat run
